--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "discord.js": "^12.3.1",
     "gifencoder": "^2.0.1",
     "hex-color-regex": "^1.1.0",
-    "megadb": "^3.4.0",
     "memejs": "^1.2.3",
     "moment": "^2.27.0",
     "moment-duration-format": "^2.3.2",
+    "mongoose": "^5.10.6",
     "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.0",
     "swiftcord": "^2.1.5",
