--- a/package.json
+++ b/package.json
@@ -14,17 +14,16 @@
     "ascii-table": "0.0.9",
     "canvas": "^2.6.1",
     "chalk": "^4.1.0",
-    "discord.js": "^12.3.1",
+    "discord.js": "^12.5.1",
     "gifencoder": "^2.0.1",
     "hex-color-regex": "^1.1.0",
     "memejs": "^1.2.3",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^5.10.6",
+    "mongoose": "^5.11.12",
     "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.1",
-    "swiftcord": "^2.1.5",
-    "tnai": "^1.0.3",
-    "zeew": "^0.1.7"
+    "swiftcord": "^2.1.6",
+    "tnai": "^1.0.5"
   }
 }
