--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Mi primer bot hecho en modo serio",
   "main": "index.js",
   "scripts": {
-    "test": "node bot.js",
-    "start": "echo iniciando && cd src && node index.js"
+    "start": "node .",
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "DISCORD: Danny Palma uwu#0888(ID Discord: 355824156127920148)",
@@ -24,5 +24,8 @@
     "node-fetch": "^2.6.1",
     "swiftcord": "^2.1.6",
     "tnai": "^1.0.5"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.3"
   }
 }
