--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "bot-menhera",
   "version": "5.0.0",
   "description": "Mi primer bot hecho en modo serio",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "start": "node .",
+    "start": "cd dist && node index.js",
     "postinstall": "tsc"
   },
   "keywords": [],
@@ -26,6 +26,8 @@
     "tnai": "^1.0.5"
   },
   "devDependencies": {
+    "@types/hex-color-regex": "^1.1.0",
+    "@types/node-fetch": "^2.5.8",
     "typescript": "^4.1.3"
   }
 }
