--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "start": "cd dist && node index.js",
     "dev": "nodemon"
   },
+  "engines": {
+    "node": "12.20.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danny-palma/bot-menhera-mongodb.git"
+  },
+  "bugs": {
+    "url": "git+https://github.com/danny-palma/bot-menhera-mongodb/issues"
+  },
+  "homepage": "https://github.com/danny-palma/bot-menhera-mongodb#readme",
   "keywords": [],
   "author": "Danny Palma, discordID: 355824156127920148",
   "license": "ISC",
@@ -20,14 +31,15 @@
     "memejs": "^1.2.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^5.11.12",
+    "mongoose": "^5.11.15",
     "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.1",
     "swiftcord": "^2.1.6",
-    "tnai": "^1.0.5"
+    "tnai": "^1.1.0"
   },
   "devDependencies": {
     "@types/hex-color-regex": "^1.1.0",
+    "@types/node": "^14.14.25",
     "@types/node-fetch": "^2.5.8",
     "nodemon": "^2.0.7",
     "typescript": "^4.1.3"
