--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "typescript.format.semicolons": "insert",
+    "editor.formatOnSave": true
 }
