--- a/package.json
+++ b/package.json
@@ -23,22 +23,31 @@
   "author": "Danny Palma, discordID: 355824156127920148",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/opus": "^0.4.0",
     "ascii-table": "0.0.9",
     "canvas": "^2.6.1",
     "chalk": "^4.1.0",
     "discord.js": "^12.5.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-static": "^4.2.7",
     "hex-color-regex": "^1.1.0",
+    "html-entities": "^2.1.0",
     "memejs": "^1.2.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.11.15",
     "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.1",
+    "node-opus": "^0.3.3",
+    "opusscript": "0.0.7",
     "swiftcord": "^2.1.6",
-    "tnai": "^1.1.0"
+    "tnai": "^1.1.0",
+    "youtube-search": "^1.1.6",
+    "ytdl-core": "^4.4.5"
   },
   "devDependencies": {
     "@types/hex-color-regex": "^1.1.0",
+    "@types/moment-duration-format": "^2.2.2",
     "@types/node": "^14.14.25",
     "@types/node-fetch": "^2.5.8",
     "nodemon": "^2.0.7",
