--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "pwa-node",
             "request": "launch",
-            "name": "debug project",
+            "name": "Bot: Debug Discord Bot",
             "skipFiles": [
                 "<node_internals>/**"
             ],
